2009-11-09  Ross Younger  <wry@eCosCentric.com>

	* nand.h: Rationalise interface:
	  * read_page: now only reads a whole page and/or its spare.
	  * read_part_page: Created.  Allows part-pages and optionally
	    not checking ECC.
	  * write_page: now only writes a whole page and/or its spare.
	* tests: Update for interface tweak.

2009-11-06  Ross Younger  <wry@eCosCentric.com>

	* nand_ecc_mtd_fast.c: Created. Complete rewrite of software 
	ECC for massive performance boost. In summary, use all 32 bits
	of a register at once, and part-unroll the operation. (Also
	rewrote the ecc repair function to drop the dependency on the
	previous (imported) code.
	* tests: Update to suit the above.
	* tests/eccequiv.c: Created (used to test new ECC implementation).

2009-10-28  Ross Younger  <wry@eCosCentric.com>

	* nand.cdl, nand.c, nand_bbt.[ch]: CYGSEM_IO_NAND_USE_BBT
	implemented (default on).  Updated tests and utils to suit.
	* nand.cdl: Add convenience options to build the utils as well
	as the tests.
	* tests/sweccwalk.c: Created (software ECC bit-walker and repair
	consistency checks)
	* nand.sgml: Updated for the above. Documented ECC algorithm
	interface.
	* tests/rwbenchmark.c: Have rwbenchmark use randomised test data
	and check its work for better validity.

2009-10-08  Ross Younger  <wry@eCosCentric.com>

	* nand_ecc.h, nand.c, nand_ecc_mtd.c: Expand ECC interface
	to better allow hardware assistance.
	* nand_device.h, nand.cdl: Change function set ("v2"), add cdl marker
	* nand.c: Implement v2 read/write, updated devinit
	* nand.c, nand_bbt.h: Internally expose "raw" page read/write fns
	* nand_oob.c, nand_oob.h: Create packed_{read,write} fns
	* nand_bbt.c: Use raw page read/write fns, packed read/write fns
	- and sanity test them on startup
	* nand.sgml: Document driver interface change.
	* rwbenchmark.c: Check that we read the requisite amount of data.

2009-09-28  Ross Younger  <wry@eCosCentric.com>

	* tests: Don't put large arrays on stack.
